--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -7,7 +7,7 @@
 <div id="cusdis_thread" data-host="https://cusdis.com" data-app-id="ef3f4358-4b43-4fe8-be67-d35315697c9a"
     data-page-id="{{ .File.UniqueID }}" data-page-url="{{ .Permalink }}" data-page-title="{{ .Title }}"></div>
 
-<script defer src="https://comments.pseudoyu.com/js/widget/lang/zh-cn.js"></script>
-<script async defer src="https://comments.pseudoyu.com/js/cusdis.es.js"></script>
-<script defer data-host="https://comments.pseudoyu.com" data-app-id="27a61667-fd43-4a0d-934d-f45b944489ee"
-    src="https://comments.pseudoyu.com/js/cusdis-count.umd.js"></script>
+<script defer src="https://cusdis.com/js/widget/lang/zh-cn.js"></script>
+<script async defer src="https://cusdis.com/js/cusdis.es.js"></script>
+<script defer data-host="https://cusdis.com" data-app-id="ef3f4358-4b43-4fe8-be67-d35315697c9a"
+    src="https://cusdis.com/js/cusdis-count.umd.js"></script>
